--- a/nyheder.html
+++ b/nyheder.html
@@ -163,7 +163,7 @@
                   </div>
                   <div class="custom-donation-modal">
                     <textarea
-                      class="donation-option"
+                      class="donation-option-modal"
                       rows="1"
                       placeholder="Valgfrit beløb"
                       onclick="selectCustom()"
@@ -191,7 +191,7 @@
           <h2 class="news-headline">Seneste nyheder fra os</h2>
           <div class="news-card-container">
             <article class="news-article-card">
-              <img src="img/index/news1.png" alt="" class="news-img" />
+              <img src="img/index/news1.webp" alt="" class="news-img" />
               <div class="news-content">
                 <p class="news-text tagline">
                   Congos Børn udvider indsatsen i Øst-DR Congo og Kinshasa
@@ -204,7 +204,7 @@
               </div>
             </article>
             <article class="news-article-card">
-              <img src="img/index/news2.png" alt="" class="news-img" />
+              <img src="img/index/news2.webp" alt="" class="news-img" />
               <div class="news-content">
                 <p class="news-text tagline">En glædelig nyhed!</p>
                 <p class="news-text">
@@ -215,7 +215,7 @@
               </div>
             </article>
             <article class="news-article-card">
-              <img src="img/index/news3.png" alt="" class="news-img" />
+              <img src="img/index/news3.webp" alt="" class="news-img" />
               <div class="news-content">
                 <p class="news-text tagline">
                   Et nyt håb for Kinshasas gadebørn
