--- a/bestyrelsen.html
+++ b/bestyrelsen.html
@@ -165,7 +165,7 @@
                   </div>
                   <div class="custom-donation-modal">
                     <textarea
-                      class="donation-option"
+                      class="donation-option-modal"
                       rows="1"
                       placeholder="Valgfrit beløb"
                       onclick="selectCustom()"
