--- a/billedgalleri.html
+++ b/billedgalleri.html
@@ -163,7 +163,7 @@
                   </div>
                   <div class="custom-donation-modal">
                     <textarea
-                      class="donation-option"
+                      class="donation-option-modal"
                       rows="1"
                       placeholder="Valgfrit beløb"
                       onclick="selectCustom()"
