--- a/webshop.html
+++ b/webshop.html
@@ -164,7 +164,7 @@
                   </div>
                   <div class="custom-donation-modal">
                     <textarea
-                      class="donation-option"
+                      class="donation-option-modal"
                       rows="1"
                       placeholder="Valgfrit beløb"
                       onclick="selectCustom()"
